# cortex-nano

./: .gitignore  ARCHITECTURE.md  README.md  push.sh  pyproject.toml
docs/: SEMALINGUA_SPEC.md
src/cortex_nano/: api.py  chunking.py  extract.py  ingest.py  main.py  retrieval.py  search.py  semalingua.py  session_ingest.py  smart_extract.py  store.py  transcripts.py
tests/: sample_session.jsonl  smoke.md
