[project]
name = "cortex-nano"
version = "0.1.0"
description = "Local-first memory for agent transcripts, notes, and project docs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cortex-nano = "cortex_nano.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_nano"]
